tests/parsing/smtlib/mcil/errors/254_check-system_query_missing_condition_var_list.mcil
(check-system sys :query (q))